--- a/gui/admin-gui-sk-SK/pom.xml
+++ b/gui/admin-gui-sk-SK/pom.xml
@@ -21,11 +21,11 @@
     <groupId>com.evolveum.midpoint.gui</groupId>
     <artifactId>admin-gui-sk-SK</artifactId>
     <packaging>jar</packaging>
-    <version>2.3-SNAPSHOT</version>
+    <version>3.0</version>
     <parent>
         <artifactId>gui</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.3-SNAPSHOT</version>
+        <version>3.0</version>
     </parent>
     <scm>
         <connection>https://github.com/Evolveum/midpoint.git</connection>
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.3-SNAPSHOT</version>
+            <version>3.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
