--- a/icf-connectors/dummy-connector-fake/pom.xml
+++ b/icf-connectors/dummy-connector-fake/pom.xml
@@ -20,12 +20,12 @@
 	<name>Dummy Connector Fake</name>
 	<groupId>com.evolveum.icf</groupId>
 	<artifactId>dummy-connector-fake</artifactId>
-	<version>2.3-SNAPSHOT</version>
+	<version>3.0</version>
 	<packaging>jar</packaging>
 	<parent>
 		<artifactId>icf-connectors</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.3-SNAPSHOT</version>
+		<version>3.0</version>
 	</parent>
     <scm>
         <connection>https://github.com/Evolveum/midpoint.git</connection>
