--- a/infra/pom.xml
+++ b/infra/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>parent</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.3-SNAPSHOT</version>
+        <version>3.0</version>
         <relativePath>../build-system/pom.xml</relativePath>
     </parent>
     <organization>
