--- a/infra/prism/pom.xml
+++ b/infra/prism/pom.xml
@@ -20,12 +20,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.evolveum.midpoint.infra</groupId>
     <artifactId>prism</artifactId>
-    <version>2.3-SNAPSHOT</version>
+    <version>3.0</version>
     <name>midPoint Infrastructure - prism</name>
     <parent>
         <artifactId>infra</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.3-SNAPSHOT</version>
+        <version>3.0</version>
     </parent>
     <scm>
         <connection>https://github.com/Evolveum/midpoint.git</connection>
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>util</artifactId>
-            <version>2.3-SNAPSHOT</version>
+            <version>3.0</version>
         </dependency>
         <!-- <dependency>
             <groupId>com.sun.xsom</groupId>
@@ -139,7 +139,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.3-SNAPSHOT</version>
+            <version>3.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
