--- a/infra/test-util/pom.xml
+++ b/infra/test-util/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<artifactId>infra</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.3-SNAPSHOT</version>
+		<version>3.0</version>
 	</parent>
     <scm>
         <connection>https://github.com/Evolveum/midpoint.git</connection>
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>schema</artifactId>
-			<version>2.3-SNAPSHOT</version>
+			<version>3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.forgerock.opendj</groupId>
@@ -94,7 +94,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.3-SNAPSHOT</version>
+			<version>3.0</version>
 		</dependency>
 	</dependencies>
 </project>
