--- a/model/model-client/pom.xml
+++ b/model/model-client/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>model</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.3-SNAPSHOT</version>
+        <version>3.0</version>
     </parent>
     <scm>
         <connection>https://github.com/Evolveum/midpoint.git</connection>
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.3-SNAPSHOT</version>
+            <version>3.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -119,13 +119,13 @@
                                 <artifactItem>
                                     <groupId>com.evolveum.midpoint.infra</groupId>
                                     <artifactId>prism</artifactId>
-                                    <version>2.3-SNAPSHOT</version>
+                                    <version>3.0</version>
                                     <type>jar</type>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.evolveum.midpoint.infra</groupId>
                                     <artifactId>schema</artifactId>
-                                    <version>2.3-SNAPSHOT</version>
+                                    <version>3.0</version>
                                     <type>jar</type>
                                 </artifactItem>
                             </artifactItems>
@@ -233,7 +233,7 @@
                     <dependency>
                         <groupId>com.evolveum.midpoint.tools</groupId>
                         <artifactId>xjc-plugin</artifactId>
-                        <version>2.3-SNAPSHOT</version>
+                        <version>3.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
