--- a/model/report-api/pom.xml
+++ b/model/report-api/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<artifactId>model</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.3-SNAPSHOT</version>
+		<version>3.0</version>
 	</parent>
 	<organization>
 		<name>Evolveum</name>
@@ -50,12 +50,12 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.model</groupId>
 			<artifactId>model-api</artifactId>
-			<version>2.3-SNAPSHOT</version>
+			<version>3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.3-SNAPSHOT</version>
+			<version>3.0</version>
 			<scope>test</scope>
 		</dependency>
     </dependencies>
