--- a/tools/xjc-plugin/pom.xml
+++ b/tools/xjc-plugin/pom.xml
@@ -19,13 +19,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.evolveum.midpoint.tools</groupId>
     <artifactId>xjc-plugin</artifactId>
-    <version>2.3-SNAPSHOT</version>
+    <version>3.0</version>
     <packaging>jar</packaging>
     <name>midPoint Infrastructure - xjc plugin</name>
     <parent>
         <artifactId>tools</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.3-SNAPSHOT</version>
+        <version>3.0</version>
     </parent>
     <scm>
         <connection>https://github.com/Evolveum/midpoint.git</connection>
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>prism</artifactId>
-            <version>2.3-SNAPSHOT</version>
+            <version>3.0</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.3-SNAPSHOT</version>
+            <version>3.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
